--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,7 @@
 
+# Ignore toplevel .zip files
+/*.zip
+
 # Created by https://www.gitignore.io/api/latex
 # Edit at https://www.gitignore.io/?templates=latex
 
